fixed issue that caused dash to break on smaller screen

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -10,6 +10,7 @@
 
 .dash-view-wrap {
 	width: 85%;
+	margin-left: 15%;
 }
 
 .settings-view {
