--- a/assets/scss/components/dash-nav.scss
+++ b/assets/scss/components/dash-nav.scss
@@ -22,6 +22,7 @@
   width: 100%;
   left: 0;
   right: 0;
+  z-index: 1;
 
   .nav-item {
     color: $primary-color;
